[tool.poetry]
name = "hazelnut"
version = "0.1.0"
description = ""
authors = ["Ethan Brooks <ethanabrooks@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = [
    {platform = 'darwin', url =  "https://download.pytorch.org/whl/cpu/torch-1.9.0-cp38-none-macosx_10_9_x86_64.whl"},
    {platform = 'linux', url = "https://download.pytorch.org/whl/cu111/torch-1.9.0%2Bcu111-cp38-cp38-linux_x86_64.whl"}
]
stable-baselines3 = "^1.5.0"
numpy = "^1.22.3"
run-logger = "^0.1.0"
gym = {version = "0.21.0", extras = ["atari", "accept-rom-license"]}

[tool.poetry.dev-dependencies]
ipython = "^8.0.1"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.vscode
  | \__pycache__
  | \venv
  | _build
)/
'''

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
