[tool.poetry]
name = "hazelnut"
version = "0.1.0"
description = ""
authors = ["Ethan Brooks <ethanabrooks@gmail.com>", "Yikai Fan <yikaifan@umich.edu>", "Zachary Eichenberger <zeichen@umich.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22"
stable-baselines3 = "^2.0.0"
gym = {version = "^0.26"}
torch-geometric = "^2.3"
PyYAML = "^6.0"
ray = { version = "^2.0.0", extras = ["tune"] }
torch = {version = "^2.1.0+cu121", source = "pytorch"}
gitpython = "^3.1.40"
transformers = "^4.34.1"
wandb = "^0.15.12"
[tool.poetry.dev-dependencies]
ipython = "^8.0.1"
ipdb = "^0.13.9"
matplotlib = ">3.7"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.vscode
  | \__pycache__
  | \venv
  | _build
)/
'''

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
